# yuclaw-brain

./: .gitignore  README.md  README_PACKAGE.md  START.sh  daily_runner.py  install.sh  pyproject.toml  rebuild_html.py  refresh_dashboard.sh  setup.py  yuclaw_cli.py
.claude/: settings.local.json
docs/: PROFILE.md  app.html  index.html  institutional_onepager.md  linkedin_outreach.md
docs/data/: dashboard_state.json
engines/: check_nemotron.sh  run_dashboard.py  run_macro.py  run_screener.py
output/: aggregated_signals.json  backtest_all.json  backtest_results.json  brief_log.txt  daily_build_report.json  daily_run_2026-03-25.json  daily_run_2026-03-26.json  daily_run_2026-03-27.json  daily_run_2026-03-28.json  daily_run_2026-03-29.json  daily_summary.json  dashboard_state.json  execution_state.json  finclaw_brief_20260322.md  macro_log.txt  news_sentiment.json  pipeline_2026-03-26.json  pipeline_2026-03-27.json  pipeline_2026-03-28.json  pipeline_2026-03-29.json  portfolio_memory_v2.json  portfolio_optimization.json  real_prices.json  sector_rotation.json  signal_log.txt  track_log.txt  track_record_day3.json  track_record_summary.json  track_record_v2.json  track_record_verified.json  tweet_drafts.json  validation_studio_v2.json  xbrl_financials.json
output/daily/: 2026-03-24_brief.txt  2026-03-24_morning_brief.txt  2026-03-24_real_brief.txt  2026-03-25_day3_brief.txt  (+6 more)
services/: start_super.sh
yuclaw/: __main__.py  cli.py  cli_v2.py  engine.py
yuclaw.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
yuclaw/api/: server.py
(+369 files in other folders)
