[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yuclaw"
version = "1.2.0"
description = "YUCLAW — Open Financial Intelligence Platform"
readme = "README_PACKAGE.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["finance", "trading", "quant", "zkp", "backtesting", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "yfinance>=0.2.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.28.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "rich>=13.0.0",
]

[project.scripts]
yuclaw = "yuclaw.cli:main"

[project.urls]
Homepage = "https://github.com/YuClawLab"
Dashboard = "https://yuclawlab.github.io/yuclaw-brain"
